--- a/BlazorApp1/deploy.yml
+++ b/BlazorApp1/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Publish Blazor WebAssembly
-      run: dotnet publish -c Release --property:PublishDir=release
+      run: dotnet publish -c Release release
 
     - name: Copy index.html for GitHub Pages routing
       run: cp release/wwwroot/index.html release/wwwroot/404.html
